<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/RSSFeed"></TextView>
<EditText android:id="@+id/editText1" android:layout_height="wrap_content" android:layout_width="match_parent">
    <requestFocus></requestFocus>
</EditText>
<!--<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/or"></TextView>-->
<!--<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:text="@string/OPMLURL"></TextView>-->
<!--<EditText android:id="@+id/editText2" android:layout_height="wrap_content" android:layout_width="match_parent"></EditText>-->
<Button android:text="@string/buttonText" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
<Button android:layout_height="wrap_content" android:text="@string/button2Text" android:id="@+id/button2" android:layout_width="wrap_content"></Button>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:text="@string/defaultText"></TextView>
</ScrollView>
</LinearLayout>
